--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -46,9 +46,9 @@
               </form>
             </div>
 
-          </nav><br>
+          </nav>
         
-        <div class="container-fluid">
+        <div>
             {% block body %}
             {% endblock %}
         </div>
