changed api algo

--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -13,7 +13,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             
-            <a style="color: #f0ad4e;" class="navbar-brand" href="#">DecentraSpot</a>
+            <a style="color: #f0ad4e;" class="navbar-brand" href="{% url 'logout' %}">DecentraSpot</a>
 
             <div class="navbar-collapse">
               <ul class="navbar-nav mr-auto">
