--- a/exchange/templates/exchange/index.html
+++ b/exchange/templates/exchange/index.html
@@ -2,16 +2,18 @@
 {% load static %}
 
 {% block body %}
+<div class="bg-dark text-white">
 <div style="border-radius:0;" class="card mb-3 text-white bg-dark">
     
-    <img style="width:100%;height:600px;" src="https://images.unsplash.com/photo-1622630732303-8e94514a1746?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2794&q=80">
+    <img style="width:100%; height:800px;" src="https://images.unsplash.com/photo-1622630732303-8e94514a1746?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2794&q=80">
 
     <div class="card-img-overlay">
-        <h3 class="card-title">Request | Trade | Gain Interests</h3>
-        <h5 class="card-text">DecentraSpot has been successful to make lending possible in Spots.</h5>
+        <h3 class="card-title">Gain additional interests!</h3>
+        <h5 class="card-text">DecentraSpot has been successful in making lending possible in Spots.</h5>
         <h6 class="card-text">Through our peers on DecentraSpot, you can now trade tokens and choose to pay later in the spot of your choice. That's cool! Isn't it?</h6>
     </div>
 </div>
+
 
 <div class="table-responsive">
     <table class="table table-dark table-hover">
@@ -25,6 +27,7 @@
                 <th scope="col">1 Week Change</th>
             </tr>
         </thead>
+
         <tbody>
             <tr>
                 <td>BTC</td>
@@ -82,10 +85,24 @@
                 <td>{{ change24h.dot }} Percent</td>
                 <td>{{ change7d.dot }} Percent</td>
             </tr>
+            <tr>
+                <td>UNI</td>
+                <td>Uniswap</td>
+                <td>USD {{ price.uni }}</td>
+                <td>{{ market_cap.uni }} B</td>
+                <td>{{ change24h.uni }} Percent</td>
+                <td>{{ change7d.uni }} Percent</td>
+            </tr>
+            <tr>
+                <td>LTC</td>
+                <td>Litecoin</td>
+                <td>USD {{ price.ltc }}</td>
+                <td>{{ market_cap.ltc }} B</td>
+                <td>{{ change24h.ltc }} Percent</td>
+                <td>{{ change7d.ltc }} Percent</td>
+            </tr>
         </tbody>
     </table>
+</div><br><br>
 </div>
-<br><br>
-
-
 {% endblock %}
