--- a/exchange/templates/exchange/register.html
+++ b/exchange/templates/exchange/register.html
@@ -1,38 +1,39 @@
 {% extends "exchange/layout.html" %}
 
 {% block body %}
-
-    <h2>Just a minute!</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+    <div style="height:800px; padding-top:120px;" class="bg-dark text-white">
+    <div class="container">
 
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
-        <div class="row form-group">
-        <div class="col-sm-6" >
+        <div class="form-group col-sm-4 offset-sm-4" >
+            <h3 style="color: #f0ad4e;">Register</h3><br>
+            {% if message %}
+            <div>{{ message }}</div>
+            {% endif %}
             <input class="form-control" autofocus type="text" name="firstname" placeholder="First Name">
         </div>
-        <div class="col-sm-6">
+        <div class="form-group col-sm-4 offset-sm-4">
             <input class="form-control" type="text" name="lastname" placeholder="Last Name">
         </div>
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="form-control" type="text" name="username" autocomplete="off" placeholder="Username">
         </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="username" placeholder="Username">
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="form-control" type="email" name="email" placeholder="Email address">
         </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="form-control" type="password" name="password" autocomplete="off" placeholder="Password">
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
+        <div class="form-group col-sm-4 offset-sm-4">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <input class="btn btn-warning btn-block" type="submit" value="Register">
+        <div class="form-group col-sm-4 offset-sm-4">
+        <input class="btn btn-warning btn-block" type="submit" value="Register"><br>
+        Have an account? <a href="{% url 'login' %}">Log In here.</a>
+        </div>
     </form>
 
-    Have an account? <a href="{% url 'login' %}">Log In here.</a>
-
+    </div>
+    </div>
 {% endblock %}
