--- a/exchange/templates/exchange/index.html
+++ b/exchange/templates/exchange/index.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block body %}
-<div class="bg-dark text-white">
 <div style="border-radius:0;" class="card mb-3 text-white bg-dark">
     
     <img style="width:100%; height:800px;" src="https://images.unsplash.com/photo-1622630732303-8e94514a1746?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2794&q=80">
@@ -39,7 +38,7 @@
             </tr>
             <tr>
                 <td>ETH</td>
-                <td>Etherium</td>
+                <td>Ethereum</td>
                 <td>USD {{ price.eth }}</td>
                 <td>{{ market_cap.eth }} B</td>
                 <td>{{ change24h.eth }} Percent</td>
@@ -68,6 +67,14 @@
                 <td>{{ market_cap.sol }} B</td>
                 <td>{{ change24h.sol }} Percent</td>
                 <td>{{ change7d.sol }} Percent</td>
+            </tr>
+            <tr>
+                <td>BUSD</td>
+                <td>BUSD</td>
+                <td>USD {{ price.busd }}</td>
+                <td>{{ market_cap.busd }} B</td>
+                <td>{{ change24h.busd }} Percent</td>
+                <td>{{ change7d.busd }} Percent</td>
             </tr>
             <tr>
                 <td>XRP</td>
@@ -104,5 +111,4 @@
         </tbody>
     </table>
 </div><br><br>
-</div>
 {% endblock %}
