--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -13,13 +13,13 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             
-            <a style="color: #f0ad4e;" class="navbar-brand" href="{% url 'logout' %}">DecentraSpot</a>
+            <a style="color: #f0ad4e;" class="navbar-brand" href="{% url 'index' %}">DecentraSpot</a>
 
             <div class="navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'balance' request.user.username %}">Wallets</a>
+                    <a class="nav-link" href="{% url 'balance' request.user.username %}">Wallet</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="">Transactions</a>
