--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -53,7 +53,7 @@
             {% endblock %}
         </div>
 
-        <footer class="bg-dark p-3">
+        <footer class="bg-dark">
             <div>
                 <p>Copyright @ DecentraSpot | Contact Us: support@decentraspot.com</p>
             </div>
