--- a/exchange/templates/exchange/balance.html
+++ b/exchange/templates/exchange/balance.html
@@ -3,108 +3,214 @@
 
 {% block body %}
 <div style="height:1000px; padding-top:40px" class="bg-dark text-white">
+
 <div class="container">
 
-<div style="color: #f0ad4e;" class="row">
-<div class="col-sm-4">
-    <h3>Total: USD {{ total }}</h3>
-</div>
-<div class="col-sm-4">
-    <h3>Fiat: USD {{ balance.usd }}</h3>
-</div>
-<div class="col-sm-4">
-    <h3>Spot: USD {{ spot }}</h3>
-</div>
-</div><br>
+<div id="balance-view">
 
-<button class="btn btn-block btn-outline-warning">Load USD</button><br>
+    <div style="color: #f0ad4e;" class="row">
+        <div class="col-sm-4">
+            <h3>BUSD: $ {{ busd }}</h3>
+        </div>
+        <div class="col-sm-4">
+            <h3>Decentra: $ {{ spot }}</h3>
+        </div>
+        <div class="col-sm-4">
+            <h3>Total: $ {{ total }}</h3>
+        </div>
+    </div><br>
+    <div class="row">
+            <div class="col-sm-4">
+                <button id="load-btn" class="btn btn-block btn-outline-warning" value="{{ user.username }}">Load BUSD</button>
+            </div>
+            <div class="col-sm-4">
+                <button id="transfer-btn" class="btn btn-block btn-outline-warning">Send</button><br>
+            </div>
+            <div class="col-sm-4">
+                <button id="request-btn" class="btn btn-block btn-outline-warning">Request</button><br>
+            </div>
+    </div><br>
 
-<div style="font-size:22px" class="table-responsive">
+<div style="font-size:20px;" class="table-responsive">
     <table class="table table-dark table-hover">
-        <thead>
+        <thead style="color: #f0ad4e;">
             <tr>
                 <th scope="col">Coin</th>
                 <th scope="col">Balance</th>
-                <th></th>
-                <th></th>
+                <th scope="col">USD Value</th>
                 <th></th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
-                <td>BUSD</td>
-                <td>{{ balance.busd }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
-            </tr>
-            <tr>
                 <td>BTC</td>
                 <td>{{ balance.btc }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.btc }}</td>
+                <td><a href="{% url 'trade' 'btc' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>ETH</td>
                 <td>{{ balance.eth }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.eth }}</td>
+                <td><a href="{% url 'trade' 'eth' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>ADA</td>
                 <td>{{ balance.ada }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.ada }}</td>
+                <td><a href="{% url 'trade' 'ada' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>BNB</td>
                 <td>{{ balance.bnb }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.bnb }}</td>
+                <td><a href="{% url 'trade' 'bnb' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>SOL</td>
                 <td>{{ balance.sol }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.sol }}</td>
+                <td><a href="{% url 'trade' 'sol' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>XRP</td>
                 <td>{{ balance.xrp }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.xrp }}</td>
+                <td><a href="{% url 'trade' 'xrp' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>DOT</td>
                 <td>{{ balance.dot }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.dot }}</td>
+                <td><a href="{% url 'trade' 'dot' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>UNI</td>
                 <td>{{ balance.uni }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.uni }}</td>
+                <td><a href="{% url 'trade' 'uni' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
             <tr>
                 <td>LTC</td>
                 <td>{{ balance.ltc }}</td>
-                <td><button class="btn btn-sm btn-outline-warning">Trade</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Send</button></td>
-                <td><button class="btn btn-sm btn-outline-warning">Request</button></td>
+                <td>{{ value.ltc }}</td>
+                <td><a href="{% url 'trade' 'ltc' %}" class="btn btn-sm btn-outline-warning">Trade</a></td>
             </tr>
         </tbody>
     </table>
-</div><br><br>
 </div>
 </div>
+
+
+
+
+
+
+<div style="padding-top:100px" id="add-view">
+        <form id="load-submit">
+            <div class="form-group col-sm-4 offset-sm-4">
+                <h2 style="color: #f0ad4e;">Load BUSD</h2><br>
+                <h4>BUSD is a stable coin backed by the government, 1 BUSD = 1 USD</h4>
+                <input autofocus id="add-amount" class="form-control" type="text" name="amount" placeholder="USD amount">
+            </div>
+            <div class="form-group col-sm-4 offset-sm-4">
+                <input id="card_number" class="form-control" type="text" name="card_number" placeholder="Card Number">
+            </div>
+            <div class="form-group col-sm-4 offset-sm-4">
+                <input class="btn btn-warning btn-block" type="submit" value="Load"><br>
+            </div>
+        </form>
+</div>
+
+
+
+
+
+
+
+<div style="padding-top:100px" id="transfer-view">
+    <form action="{% url 'add_transaction' user.username %}" method="post">
+    {% csrf_token %}
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <h2 style="color: #f0ad4e;">Transfer</h2><br>
+            <select name="asset" class="form-control">
+              <option value="busd">BUSD</option>
+              <option value="btc">BTC Bitcoin</option>
+              <option value="eth">ETH Ethereum</option>
+              <option value="ada">ADA Carnado</option>
+              <option value="sol">SOL Solana</option>
+              <option value="uni">UNI Uniswap</option>
+              <option value="sol">XRP Ripple</option>
+              <option value="ltc">LTC Litecoin</option>
+              <option value="dot">DOT Polkadot</option>
+              <option value="bnb">BNB Binance</option>
+            </select>
+        </div>
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input autofocus class="form-control" type="text" name="amount" placeholder="amount">
+        </div>
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="form-control" type="text" name="recipient" placeholder="recipient">
+        </div>
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="form-control" type="password" autocomplete="off" name="password" placeholder="password">
+        </div>
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="btn btn-warning btn-block" type="submit" value="Send"><br>
+        </div>
+    </form>
+</div>
+
+
+
+
+
+
+
+<div style="padding-top:100px" id="request-view">
+    <form id="request-submit">
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <h2 style="color: #f0ad4e;">Request Spot</h2><br>
+            <select id="request-curr" class="form-control">
+              <option>BUSD</option>
+              <option>BTC Bitcoin</option>
+              <option>ETH Ethereum</option>
+              <option>ADA Carnado</option>
+              <option>SOL Solana</option>
+              <option>UNI Uniswap</option>
+              <option>XRP Ripple</option>
+              <option>LTC Litecoin</option>
+              <option>DOT Polkadot</option>
+              <option>BNB Binance</option>
+            </select>
+        </div>
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input autofocus id="request-amount" class="form-control" type="text" name="amount" placeholder="amount">
+        </div>
+
+        <div class="form-group col-sm-4 offset-sm-4">
+            <input class="btn btn-warning btn-block" type="submit" value="Send"><br>
+        </div>
+    </form>
+</div>
+
+
+
+
+
+</div>
+{% endblock %}
+
+
+
+
+{% block script %}
+    <script src="{% static 'exchange/app.js' %}"></script>
 {% endblock %}
