--- a/exchange/templates/exchange/index.html
+++ b/exchange/templates/exchange/index.html
@@ -13,10 +13,9 @@
     </div>
 </div>
 
-
-<div class="table-responsive">
+<div style="font-size:20px; height:auto" class="table-responsive">
     <table class="table table-dark table-hover">
-        <thead>
+        <thead style="color: #f0ad4e;">
             <tr>
                 <th scope="col">CUR</th>
                 <th scope="col">Name</th>
@@ -110,5 +109,5 @@
             </tr>
         </tbody>
     </table>
-</div><br><br>
+</div>
 {% endblock %}
