--- a/exchange/templates/exchange/balance.html
+++ b/exchange/templates/exchange/balance.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-<div style="height:1000px; padding-top:40px" class="bg-dark text-white">
+<div style="height:880px; padding-top:40px" class="bg-dark text-white">
 
 <div class="container">
 
@@ -19,15 +19,8 @@
             <h3>Total: $ {{ total }}</h3>
         </div>
     </div><br>
-    <div class="row">
-            <div class="col-sm-6">
-                <button id="load-btn" class="btn btn-block btn-outline-warning" value="{{ user.username }}">Load BUSD</button>
-            </div>
-
-            <div class="col-sm-6">
-                <button id="transfer-btn" class="btn btn-block btn-outline-warning">Send</button><br>
-            </div>
-    </div><br>
+    
+    <button id="load-btn" class="btn btn-block btn-outline-warning" value="{{ user.username }}">Load BUSD</button><br><br><br>
 
 <div style="font-size:20px;" class="table-responsive">
     <table class="table table-dark table-hover">
@@ -105,11 +98,11 @@
 
 
 
-<div style="padding-top:100px" id="add-view">
+<div style="padding-top:180px" id="add-view">
         <form id="load-submit">
             <div class="form-group col-sm-4 offset-sm-4">
-                <h2 style="color: #f0ad4e;">Load BUSD</h2><br>
-                <h4>BUSD is a stable coin backed by the government, 1 BUSD = 1 USD</h4>
+                <h2 style="color: #f0ad4e;">Load BUSD</h2>
+                <p>BUSD is a stable coin. 1 BUSD = 1 USD</p>
                 <input autofocus id="add-amount" class="form-control" type="text" name="amount" placeholder="USD amount">
             </div>
             <div class="form-group col-sm-4 offset-sm-4">
@@ -119,49 +112,6 @@
                 <input class="btn btn-warning btn-block" type="submit" value="Load"><br>
             </div>
         </form>
-</div>
-
-
-
-
-
-
-
-<div style="padding-top:100px" id="transfer-view">
-    <form action="{% url 'add_transaction' user.username %}" method="post">
-    {% csrf_token %}
-
-        <div class="form-group col-sm-4 offset-sm-4">
-            <h2 style="color: #f0ad4e;">Transfer</h2><br>
-            <select name="asset" class="form-control">
-              <option value="busd">BUSD</option>
-              <option value="btc">BTC Bitcoin</option>
-              <option value="eth">ETH Ethereum</option>
-              <option value="ada">ADA Carnado</option>
-              <option value="sol">SOL Solana</option>
-              <option value="uni">UNI Uniswap</option>
-              <option value="sol">XRP Ripple</option>
-              <option value="ltc">LTC Litecoin</option>
-              <option value="dot">DOT Polkadot</option>
-              <option value="bnb">BNB Binance</option>
-            </select>
-        </div>
-
-        <div class="form-group col-sm-4 offset-sm-4">
-            <input autofocus class="form-control" type="text" name="amount" placeholder="amount">
-        </div>
-
-        <div class="form-group col-sm-4 offset-sm-4">
-            <input class="form-control" type="text" name="recipient" placeholder="recipient">
-        </div>
-
-        <div class="form-group col-sm-4 offset-sm-4">
-            <input class="form-control" type="password" autocomplete="off" name="password" placeholder="password">
-        </div>
-        <div class="form-group col-sm-4 offset-sm-4">
-            <input class="btn btn-warning btn-block" type="submit" value="Send"><br>
-        </div>
-    </form>
 </div>
 </div>
 {% endblock %}
