--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -19,13 +19,17 @@
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'balance' request.user.username %}">Wallet</a>
+                        <a class="nav-link" href="{% url 'balance' request.user.username %}">Wallet</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'transaction' request.user.username %}">Transactions</a>
+                        <a class="nav-link" href="{% url 'add_transaction' request.user.username %}">Transfer</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="">Requests</a>
+                        <a class="nav-link" href="{% url 'order' request.user.username %}">Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'transaction' request.user.username %}">Transactions</a>
+                    </li>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
