--- a/exchange/templates/exchange/balance.html
+++ b/exchange/templates/exchange/balance.html
@@ -120,5 +120,5 @@
 
 
 {% block script %}
-    <script src="{% static 'exchange/app.js' %}"></script>
+    <script src="{% static 'exchange/add.js' %}"></script>
 {% endblock %}
