--- a/exchange/templates/exchange/layout.html
+++ b/exchange/templates/exchange/layout.html
@@ -19,7 +19,7 @@
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'balance' request.user.username %}">Wallet</a>
+                        <a class="nav-link" href="{% url 'balance' request.user.username %}">Balance</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'add_transaction' request.user.username %}">Transfer</a>
