--- a/exchange/templates/exchange/orders.html
+++ b/exchange/templates/exchange/orders.html
@@ -5,7 +5,17 @@
 <div style="height:1000px; padding-top:40px" class="bg-dark text-white">
 <div class="container">
 
+<div class="row">
+    <div class="col-sm-6">
+        <button id="btn1" class="btn btn-block btn-outline-warning">Bought</button>
+    </div>
+    <div class="col-sm-6">
+        <button id="btn2" class="btn btn-block btn-outline-warning">Sold</button>
+    </div>
+</div><hr class="bg-light"><br><br>
 
+
+<div id="buy-view">
 <h2 style="color: #f0ad4e;">Buy Orders</h2><br>
 <div style="font-size:20px;" class="table-responsive">
     <table class="table table-dark table-hover">
@@ -29,8 +39,10 @@
             {% endfor %}
         </tbody>
     </table>
-</div><br><br><br><br>
+</div></div>
 
+
+<div id="sell-view">
 <h2 style="color: #f0ad4e;">Sell Orders</h2><br>
 <div style="font-size:20px;" class="table-responsive">
     <table class="table table-dark table-hover">
@@ -54,7 +66,7 @@
             {% endfor %}
         </tbody>
     </table>
-</div>
+</div></div>
 
 
 
@@ -68,5 +80,5 @@
 
 
 {% block script %}
-    <script src="{% static 'exchange/app.js' %}"></script>
+    <script src="{% static 'exchange/order.js' %}"></script>
 {% endblock %}
