--- a/exchange/templates/exchange/send.html
+++ b/exchange/templates/exchange/send.html
@@ -35,11 +35,11 @@
         </div>
 
         <div class="form-group col-sm-4 offset-sm-4">
-            <input autofocus class="form-control" type="text" name="amount" placeholder="amount">
+            <input autofocus class="form-control" type="text" name="amount" placeholder="asset amount">
         </div>
 
         <div class="form-group col-sm-4 offset-sm-4">
-            <input class="form-control" type="text" name="recipient" placeholder="recipient">
+            <input class="form-control" type="text" name="recipient" placeholder="recipient username">
         </div>
 
         <div class="form-group col-sm-4 offset-sm-4">
