--- a/exchange/templates/exchange/trade.html
+++ b/exchange/templates/exchange/trade.html
@@ -23,7 +23,7 @@
         </div>
         
         <div class="form-group col-sm-4 offset-sm-4">
-            <input autofocus class="form-control" type="text" name="amount" placeholder="amount">
+            <input autofocus class="form-control" type="text" name="amount" placeholder="busd amount">
         </div>
 
         <div class="form-group col-sm-4 offset-sm-4">
