--- a/exchange/templates/exchange/index.html
+++ b/exchange/templates/exchange/index.html
@@ -65,12 +65,12 @@
                 <td>{{ change7d.sol }} Percent</td>
             </tr>
             <tr>
-                <td>BUSD</td>
-                <td>BUSD</td>
-                <td>USD {{ price.busd }}</td>
-                <td>{{ market_cap.busd }} B</td>
-                <td>{{ change24h.busd }} Percent</td>
-                <td>{{ change7d.busd }} Percent</td>
+                <td>USDT</td>
+                <td>Tether USD</td>
+                <td>USD {{ price.usdt }}</td>
+                <td>{{ market_cap.usdt }} B</td>
+                <td>{{ change24h.usdt }} Percent</td>
+                <td>{{ change7d.usdt }} Percent</td>
             </tr>
             <tr>
                 <td>XRP</td>
@@ -96,14 +96,7 @@
                 <td>{{ change24h.uni }} Percent</td>
                 <td>{{ change7d.uni }} Percent</td>
             </tr>
-            <tr>
-                <td>LTC</td>
-                <td>Litecoin</td>
-                <td>USD {{ price.ltc }}</td>
-                <td>{{ market_cap.ltc }} B</td>
-                <td>{{ change24h.ltc }} Percent</td>
-                <td>{{ change7d.ltc }} Percent</td>
-            </tr>
+
         </tbody>
     </table>
 </div>
