--- a/exchange/templates/exchange/send.html
+++ b/exchange/templates/exchange/send.html
@@ -21,14 +21,13 @@
             {% endif %}
 
             <select name="asset" class="form-control">
-              <option value="busd">BUSD</option>
+              <option value="busd">USDT</option>
               <option value="btc">BTC Bitcoin</option>
               <option value="eth">ETH Ethereum</option>
               <option value="ada">ADA Carnado</option>
               <option value="sol">SOL Solana</option>
               <option value="uni">UNI Uniswap</option>
               <option value="sol">XRP Ripple</option>
-              <option value="ltc">LTC Litecoin</option>
               <option value="dot">DOT Polkadot</option>
               <option value="bnb">BNB Binance</option>
             </select>
