--- a/exchange/templates/exchange/trade.html
+++ b/exchange/templates/exchange/trade.html
@@ -14,7 +14,7 @@
     {% csrf_token %}
 
         <div class="form-group col-sm-4 offset-sm-4">
-            <h2 style="color: #f0ad4e;">Trade {{ asset.upper }} / BUSD</h2>
+            <h2 style="color: #f0ad4e;">Trade {{ asset.upper }} / USDT</h2>
             {% if message %}
             <div>
             {{ message }}
